--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ footer {
 
 .foto-aluna {
     text-align: center;
-    background-image: url('imagens/cleide.jpg');
+    background-image: url('imagens/cleide.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
